resources/sass/pages/blog.scss
$headingColor: #3c0b8b;
$darkHeadingColor: hsl(263, 85%, 79%);

// Mixin for heading styles
@mixin headingStyles($fontSize, $marginTop, $marginBottom, $fontWeight: bold, $color: $headingColor, $darkColor: $darkHeadingColor) {
    font-size: $fontSize;
    margin-top: $marginTop;
    margin-bottom: $marginBottom;
    font-weight: $fontWeight;
    color: $color;

    @include mq('lg') {
        font-size: $fontSize * 1; // Adjust size on large screens
        margin-top: $marginTop * 1.5; // Adjust margins for larger screens
        margin-bottom: $marginBottom * 1;
    }

    // Dark mode adjustments
    @media (prefers-color-scheme: dark) {
        color: $darkColor; // Light text for dark mode
    }
}

.tw-blog-detail {
    &__body {
        color: #333333;
        // Dark mode adjustments
        @media (prefers-color-scheme: dark) {
            color: #DDDDDD; // Light text for dark mode
        }
        h2 {
            @include headingStyles(2.1rem, 1.5rem, 2rem);
        }
        h3 {
            @include headingStyles(1.7rem, 1rem, 1rem, bold, #111111, #FFF);
        }
        h4 {
            @include headingStyles(1.4rem, 1rem, 0.8rem, 900, #111111, #FFF);
        }

        h5 {
            @include headingStyles(1.2rem, 1rem, 0.6rem, 900, #111111, #FFF);
        }
        h6 {
            @include headingStyles(1rem, 1rem, 0.5rem, 900, #111111, #FFF);
        }
        strong {
            font-weight: bold;
            color: hsl(34, 75%, 33%);
            @media (prefers-color-scheme: dark) {
                color: #ffd166;
            }
        }
        a {
            color: #333333;
            text-decoration: underline;
            font-weight: bold;
        }
        p {
            line-height: 2;
            font-size: 1rem;
            padding: 5px 0;
            @include mq('lg') {
                padding: 7px 0;
            }
        }
        ul, ol {
            li {
                font-size: 1.2rem;
                padding: 5px 0;
                position: relative; // To position the custom bullet
                // Remove default list-style
                list-style: none;

                p {
                   padding: 0;
                }

                @include mq('lg') {
                    padding: 7px 0;
                }
            }
        }
        ul {
            li {
                // Custom Bullet using ::before
                &::before {
                    content: '➤'; // You can use Unicode symbols or custom text here
                    color: $headingColor; // Custom color for the bullet
                    font-size: 1rem; // Adjust size
                    position: absolute;
                    left: -2.5rem; // Adjust positioning
                    top: .9rem; // Align with text
                    @media (prefers-color-scheme: dark) {
                        color: #FFFFFF;
                    }
                }
            }
        }

        ol {
            counter-reset: list-counter; // Reset the counter at the start of each ol

            li {
                counter-increment: list-counter; // Increment the counter for each list item

                &::before {
                    content: counter(list-counter) '. '; // Display the current counter value followed by a period
                    color: $headingColor; // Custom color for the number
                    font-size: 1rem; // Adjust size
                    position: absolute;
                    left: -2.5rem; // Adjust positioning
                    top: .9rem; // Align with text
                    @media (prefers-color-scheme: dark) {
                        color: #ffd166;
                    }
                }
            }
        }

        hr {
            border: 0;
            height: 1px;
            background-color: #ccc; /* Neutral gray */
            margin: 1.5rem 0;
            opacity: 0.8 ; /* Slightly muted */
        }

        .inline_html {
            display: flex;
            justify-content: center;
            iframe {
                box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
                border-radius: 6px;
            }
        }
        .tiptap__image {
            // The blog image is too large, so we need to set a max-width
            margin: 0 auto;
            display: block;
            margin: 1rem 0;
            box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
            border-radius: 6px;
            max-width: 32rem;
            width: 100%;
            @include mq('lg') {
                max-width: 60%;
            }
        }
    }
}

